--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Visualisation et manupulation des métriques d'une maison",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/richard-fagot/homewatcher/issues"
   },
-  "homepage": "https://github.com/richard-fagot/homewatcher#readme"
+  "homepage": "https://github.com/richard-fagot/homewatcher#readme",
+  "dependencies": {
+    "request": "^2.79.0",
+    "request-promise": "^4.1.1"
+  }
 }
